# jointly-hic

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: auto-release.yaml  docker-publish.yaml  pypi-publish.yaml  python-package.yml
example-breast-tissue-joint-demo/: 1-prepare-input-run-jointly-embed.ipynb  1-prepare-inputs-run-jointly-embed.ipynb  2-create-JointDb-load-ENCODE-metadata.ipynb  3-jointly-analysis-plotting.ipynb  README.md
examples/breast-tissue-joint-analysis/: README.md
examples/immune-joint-analysis/: 1-prepare-input-data.ipynb  1-prepare-inputs-run-jointly-embed.ipynb  2-create-jointdb-load-chipseq.ipynb  3-jointly-analysis-plotting.ipynb  4-trajectory-heatmap.ipynb  ChIP-metadata.txt
jointly_hic/: parser.py
jointly_hic/core/: decomposer.py
jointly_hic/methods/: sparse_incremental_svd.py
paper/: paper.bib  paper.md
paper/jats/: paper.jats
tests/: test_end2end.py  test_entrypoint.py
tests/hdf5db/: test-data.pq
